fix: hyperparameter overflow

--- a/webui/react/src/components/HyperparameterSearchModal.module.scss
+++ b/webui/react/src/components/HyperparameterSearchModal.module.scss
@@ -65,6 +65,7 @@
       .hyperparameterContainer {
         display: grid;
         gap: 8px;
+        overflow-x: auto;
 
         .hyperparameterName {
           align-items: center;
